--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "country-state-city": "^3.2.1",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
+    "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
