--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ag-grid-react": "^33.1.1",
     "chart.js": "^3.9.1",
     "country-state-city": "^3.2.1",
+    "downloadjs": "^1.4.7",
     "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "mdb-react-ui-kit": "^9.0.0",
@@ -40,6 +41,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
+    "react-use-downloader": "^1.2.10",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "yup": "^0.32.11"
