--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-image-crop": "^11.0.7",
     "react-pro-sidebar": "^0.7.1",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.29.0",
     "react-scripts": "5.0.1",
