--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tiptap/extension-table-cell": "^2.11.7",
     "@tiptap/extension-table-header": "^2.11.7",
     "@tiptap/extension-table-row": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/extension-youtube": "^2.11.7",
     "@tiptap/pm": "^2.11.7",
     "@tiptap/react": "^2.11.7",
